# ILTAREN-Internship

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json
cppcheck/: suppressions.txt
data/: buses.txt  ilmesafe.csv
include/: Bus.tpp  BusAnalyzer.tpp  BusGenerator.tpp  BusPeriods.tpp  BusSchedule.tpp  Chr.tpp  Complex.tpp  ContIter.tpp  Deque.tpp  IIter.tpp  IO.tpp  IObjectPool.tpp  LinkedIter.tpp  LinkedList.tpp  Maybe.tpp  Node.tpp  NodeIter.tpp  ObjectPool.tpp  Queue.tpp  Stack.tpp  StaticStack.tpp  StaticVector.tpp  Traveler.tpp  UniquePtr.tpp  iter.tpp  static_vector.tpp
include/exec/: BusAnalyzer.tpp  BusGenerator.tpp  README.md  Traveler.tpp
include/io/: IO.tpp
include/iter/: ContIter.tpp  IIter.tpp  NodeIter.tpp
include/sds/: LinkedList.tpp  Node.tpp  ObjectPool.tpp  StaticStack.tpp  StaticVector.tpp
include/util/: Bus.tpp  FFT.tpp  Maybe.tpp  README.md  Timer.tpp
report/: .gitignore  report.tex
src/: analyzer.cpp  generator.cpp  main.cpp  tests.cpp  traveler.cpp
test/: BusTest.cpp  BusTest.hpp  ContIterTest.cpp  ContIterTest.hpp  IterTest.cpp  IterTest.hpp  LinkedIterTest.cpp  LinkedIterTest.hpp  LinkedListTest.cpp  LinkedListTest.hpp  MaybeTest.cpp  MaybeTest.hpp  NodeIterTest.cpp  NodeIterTest.hpp  NodeTest.cpp  NodeTest.hpp  ObjectPoolTest.cpp  ObjectPoolTest.hpp  StaticVectorTest.cpp  StaticVectorTest.hpp  static_vector_test.hpp  test_static_vector.cpp
